--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/katy/bordercollie/filter/GeneralFilter.java=UTF-8
 encoding//war/home.jsp=UTF-8
+encoding//war/includes/top.jsp=UTF-8
