--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -10,7 +10,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>DetailServlet</servlet-name>
-		<url-pattern>/articles/detail</url-pattern>		
+		<url-pattern>/articles/detail</url-pattern>
 	</servlet-mapping>
 	<servlet>
 		<servlet-name>HomeServlet</servlet-name>
@@ -23,6 +23,28 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	</servlet-mapping>
 	<!--End Of Client Servlet -->
 
+
+
+	<!-- Start Of Server Endpoint -->
+	<servlet>
+		<servlet-name>ArticleEndpoint</servlet-name>
+		<servlet-class>katy.bordercollie.admin.ArticleEndpoint</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ArticleEndpoint</servlet-name>
+		<url-pattern>/_admin/articles</url-pattern>
+		<url-pattern>/_admin/articles/*</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>CategoryEndpoint</servlet-name>
+		<servlet-class>katy.bordercollie.admin.CategoryEndpoint</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CategoryEndpoint</servlet-name>
+		<url-pattern>/_admin/categories</url-pattern>
+		<url-pattern>/_admin/categories/*</url-pattern>
+	</servlet-mapping>
+	
 
 	<servlet>
 		<servlet-name>GetUploadUrlServlet</servlet-name>
@@ -40,16 +62,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>UploadServlet</servlet-name>
 		<url-pattern>/_blobstore/upload</url-pattern>
 	</servlet-mapping>
-
-	<servlet>
-		<servlet-name>ArticleEndpoint</servlet-name>
-		<servlet-class>katy.bordercollie.admin.ArticleEndpoint</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>ArticleEndpoint</servlet-name>
-		<url-pattern>/_admin/articles</url-pattern>
-		<url-pattern>/_admin/articles/*</url-pattern>
-	</servlet-mapping>
+	<!-- End Of Server Endpoint -->
 
 	<servlet>
 		<servlet-name>Admin Home</servlet-name>
