--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/katy/bordercollie/filter/GeneralFilter.java=UTF-8
 encoding//war/includes/top.jsp=UTF-8
+encoding//war/site_map.jsp=UTF-8
 encoding/<project>=UTF-8
