--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,7 @@
 eclipse.preferences.version=1
 encoding//src/katy/bordercollie/filter/GeneralFilter.java=UTF-8
+encoding//war/includes/sidebar.jsp=UTF-8
 encoding//war/includes/top.jsp=UTF-8
+encoding//war/list-article.jsp=UTF-8
 encoding//war/site_map.jsp=UTF-8
 encoding/<project>=UTF-8
